--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "g": "^2.0.1",
     "rxjs": "~7.8.0",
+    "scss": "^0.2.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
