--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "g": "^2.0.1",
+    "ngx-cookie-service": "^19.1.2",
     "rxjs": "~7.8.0",
     "scss": "^0.2.4",
     "tslib": "^2.3.0",
